...
                }
                .sheet(isPresented: $showingSheet,
                       content: {
                        ActivityView(activityItems: [NSURL(string: self.model.editing_bookmark.url)!] as [Any], applicationActivities: nil) })

            }
            .navigationBarTitle("Bookmark", displayMode: .inline)
            .navigationBarItems(
                trailing:
                    Button(action: {self.showingSheet = true}) {
                        Image(systemName: "square.and.arrow.up").imageScale(.large).padding([.leading, .top, .bottom])
                    }
                    .sheet(isPresented: $showingSheet, content: {
...
